--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <li><a href="academic.html">Academic</a></li>
                 <li><a href="process.html">Process</a></li>
                 <li><a href="plan.html">Plan</a></li>
+                <li><a href="report.html">Report</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -45,7 +46,7 @@
         <img src="images/home-1.JPG" alt="">
         <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
-            <p>Major in Physics in National Taiwan Normal University</p>
+            <p>Major in Engineer Sciend in National Tsinghua University</p>
         </div>
     </div>
     <div class="about">
