--- a/academic.html
+++ b/academic.html
@@ -29,6 +29,7 @@
                 <li><a href="academic.html">Academic</a></li>
                 <li><a href="process.html">Process</a></li>
                 <li><a href="plan.html">Plan</a></li>
+                <li><a href="report.html">Report</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -37,7 +38,7 @@
         <img src="images/academic.jpg" alt="">
         <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
-            <p>Major in Physics in National Taiwan Normal University</p>
+            <p>Major in Engineer Sciend in National Tsinghua University</p>
         </div>
     </div>
     <div class="study-main">
