--- a/basic.html
+++ b/basic.html
@@ -85,6 +85,7 @@
                 <li><a href="academic.html">Academic</a></li>
                 <li><a href="process.html">Process</a></li>
                 <li><a href="plan.html">Plan</a></li>
+                <li><a href="report.html">Report</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -93,7 +94,7 @@
         <img src="images/skills-1.JPG" alt="">
         <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
-            <p>Major in Physics in National Taiwan Normal University</p>
+            <p>Major in Engineer Sciend in National Tsinghua University</p>
         </div>
     </div>
     
