--- a/plan.html
+++ b/plan.html
@@ -40,6 +40,7 @@
                 <li><a href="academic.html">Academic</a></li>
                 <li><a href="process.html">Process</a></li>
                 <li><a href="plan.html">Plan</a></li>
+                <li><a href="report.html">Report</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -48,11 +49,7 @@
         <img src="images/400693.jpg" alt="">
         <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
-            <p>Major in Physics in National Taiwan Normal University</p>
-        </div>
-        <div class="home-text2 animate__animated" style="display: none;">
-            <h1>Miaomi</h1>
-            <p>Major in English Program, Dept. of Applied Foreign Languages in TCHCVS</p>
+            <p>Major in Engineer Sciend in National Tsinghua University</p>
         </div>
     </div>
    
