--- a/process.html
+++ b/process.html
@@ -28,6 +28,7 @@
                 <li><a href="academic.html">Academic</a></li>
                 <li><a href="process.html">Process</a></li>
                 <li><a href="plan.html">Plan</a></li>
+                <li><a href="report.html">Report</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -36,7 +37,7 @@
         <img src="images/IMG_2768.JPG" alt="">
         <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
-            <p>Major in Physics in National Taiwan Normal University</p>
+            <p>Major in Engineer Sciend in National Tsinghua University</p>
         </div>
     </div>
     <div class="process">
