修正拼字錯誤

--- a/plan.html
+++ b/plan.html
@@ -49,7 +49,7 @@
         <img src="images/400693.jpg" alt="">
         <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
-            <p>Major in Engineer Sciend in National Tsinghua University</p>
+            <p>Major in Engineer Science in National Tsinghua University</p>
         </div>
     </div>
    
