--- a/academic.html
+++ b/academic.html
@@ -38,7 +38,7 @@
         <img src="images/academic.jpg" alt="">
         <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
-            <p>Major in Engineer Sciend in National Tsinghua University</p>
+            <p>Major in Engineer Science in National Tsinghua University</p>
         </div>
     </div>
     <div class="study-main">
