--- a/basic.html
+++ b/basic.html
@@ -94,7 +94,7 @@
         <img src="images/skills-1.JPG" alt="">
         <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
-            <p>Major in Engineer Sciend in National Tsinghua University</p>
+            <p>Major in Engineer Science in National Tsinghua University</p>
         </div>
     </div>
     
