--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <img src="images/home-1.JPG" alt="">
         <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
-            <p>Major in Engineer Sciend in National Tsinghua University</p>
+            <p>Major in Engineer Science in National Tsinghua University</p>
         </div>
     </div>
     <div class="about">
