--- a/process.html
+++ b/process.html
@@ -37,7 +37,7 @@
         <img src="images/IMG_2768.JPG" alt="">
         <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
-            <p>Major in Engineer Sciend in National Tsinghua University</p>
+            <p>Major in Engineer Science in National Tsinghua University</p>
         </div>
     </div>
     <div class="process">
