--- a/report.html
+++ b/report.html
@@ -39,7 +39,7 @@
         <img src="images/IMG_5816.jpg" alt="">
         <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
-            <p>Major in Engineer Sciend in National Tsinghua University</p>
+            <p>Major in Engineer Science in National Tsinghua University</p>
         </div>
         <div class="home-text2 animate__animated" style="display: none;">
             <h1>Miaomi</h1>
