--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="list">
             <ul>
-                <li><a href="index2.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="basic.html">Basic</a></li>
                 <li><a href="academic.html">Academic</a></li>
                 <li><a href="process.html">Process</a></li>
