--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <h1 style="display: none;">學術資源區</h1>
              <h1 class="vid-title">物理試教教材</h1>
                 <div class="vid vid-2">
-                    <a target="_blank" href="https://drive.google.com/file/d/1X2mTfDHTQDUMgmDXiB9IzLU8ZQ4VC1B_/view?usp=sharing"><i class="fa-regular fa-file-pdf"></i> 教學講義</a>
-                    <a target="_blank" href="https://drive.google.com/file/d/1YoDV-fL1nqjIcsQvMrxevu5oTWFPWgh7/view?usp=sharing"><i class="fa-regular fa-file-pdf"></i> 恢復係數</a>
-                    <a target="_blank" href="https://drive.google.com/file/d/1d2RfwhtPvZvgz_krcdFUoN8ID5_trkH3/view?usp=sharing"><i class="fa-regular fa-file-pdf"></i> 折合質量</a>
+                    <a target="_blank" href="https://drive.google.com/file/d/1rtu5zVR1XQDd9bARKjueqlpPfJN4JADr/view?usp=share_link"><i class="fa-regular fa-file-pdf"></i> 教學講義</a>
+                    <a target="_blank" href="https://drive.google.com/file/d/1zS6rGjl13oprnRcIn3W0tedNr5mQHZEr/view?usp=share_link"><i class="fa-regular fa-file-pdf"></i> 恢復係數</a>
+                    <a target="_blank" href="https://drive.google.com/file/d/1rtu5zVR1XQDd9bARKjueqlpPfJN4JADr/view?usp=share_link"><i class="fa-regular fa-file-pdf"></i> 折合質量</a>
                 </div>
                 <h1 class="vid-title">物理試教影片</h1>
                 <div class="vid vid-3">
