--- a/report.html
+++ b/report.html
@@ -64,6 +64,54 @@
                 <iframe src="PDF/arduino.pdf" frameborder="0" class="ifr"></iframe>
             </div>
         </div>
+        <h1>My Self-Learning for Advanced Placement</h1>
+        <div class="content">
+            <div class="box">
+                <iframe src="PDF/1.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+            <div class="box">
+                <iframe src="PDF/2.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+            <div class="box">
+                <iframe src="PDF/3.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+            <div class="box">
+                <iframe src="PDF/4.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+            <div class="box">
+                <iframe src="PDF/5.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+            <div class="box">
+                <iframe src="PDF/6.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+            <div class="box">
+                <iframe src="PDF/7.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+            <div class="box">
+                <iframe src="PDF/8.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+            <div class="box">
+                <iframe src="PDF/9.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+            <div class="box">
+                <iframe src="PDF/10.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+            <div class="box">
+                <iframe src="PDF/11.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+            <div class="box">
+                <iframe src="PDF/12.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+            <div class="box">
+                <iframe src="PDF/13.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+            <div class="box">
+                <iframe src="PDF/14.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+            <div class="box">
+                <iframe src="PDF/15.pdf" frameborder="0" class="ifr"></iframe>
+            </div>
+        </div>
     </div>
     <div class="more-info">
         <span class="more"><a class="more-a" target="_blank" href="https://drive.google.com/file/d/1BMB_8Zbh5LaKT7yNHsUSbepBZ53g3kMT/view?usp=share_link">觀看更多 --></a></span>
