--- a/academic.html
+++ b/academic.html
@@ -134,7 +134,7 @@
                     <th>日本美術</th>
                     <th style="color: red;">國際認證</th>
                     <th style="color: red;">國際認證</th>
-                    <th style="color: red;">國際認證</th>
+                    <th>自主學習</th>
                     <th>自主學習</th>
                 </tr>
                 <tr>
@@ -149,24 +149,24 @@
                     <th>B+</th>
                     <th>ITS</th>
                     <th>OCPJD</th>
-                    <th>OCEJWCD</th>
                     <th>JavaScript</th>
+                    <th>Vue.js</th>
                 </tr>
             </table>
             <table class="score-table1">
                 <tr>
                     <th>科目</th>
-                    <th style="color: brown;">力學二</th>
-                    <th style="color: brown;">數學物理二</th>
-                    <th style="color: brown;">電磁學一</th>
-                    <th style="color: brown;">實驗物理二</th>
-                    <th style="color: brown;">實驗技術</th>
+                    <th style="color: brown;">原子科學導論</th>
+                    <th style="color: brown;">材科導論一</th>
+                    <th style="color: brown;">電路學</th>
+                    <th style="color: brown;">材料熱力學</th>
+                    <th style="color: brown;">程式設計ㄧ</th>
                     <th>體育</th>
-                    <th>Excel商務</th>
-                    <th>Excel程設</th>
-                    <th>投資理財</th>
-                    <th>外修課程</th>
-                    <th>外修課程</th>
+                    <th>大學中文</th>
+                    <th>新聞英文</th>
+                    <th style="color: red;">國際認證</th>
+                    <th>自主學習</th>
+                    <th>自主學習</th>
                     <th>自主學習</th>
                 </tr>
                 <tr>
@@ -179,9 +179,9 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <th>none</th>
-                    <th>網頁開發</th>
-                    <th>Spring框架</th>
+                    <th>OCE JWCD</th>
+                    <th>線性代數</th>
+                    <th>AppScript</th>
                     <th style="font-size: 10px;">JavaScript ES6</th>
                 </tr>
             </table>
