--- a/plan.html
+++ b/plan.html
@@ -103,7 +103,7 @@
             <img src="images/OCA.PNG" width="300px" height="300px" alt="">
         </div>
         <div class="pv-content">
-            <img src="images/OCP.PNG" width="300px" height="300px" alt="">
+            <img src="images/01_Java_EE_7_App_Developer_Professional__2_.png" width="300px" height="300px" alt="">
         </div>
         <div class="pv-content">
             <img  src="images/se11.png" height="300px" alt="">
